# BUSSINESS-OS-V2

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  business_os_complete_master_codex_prompt_v3.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
business_os/: __init__.py
business_os/api/: router.py
business_os/apps/: __init__.py
business_os/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
business_os/portals/: __init__.py  admin_urls.py  platform_urls.py  views.py
business_os/templates/: base.html
docker/: Dockerfile  entrypoint.sh
docs/planning/: 01-architecture.md  02-roadmap-progress.md  03-implementation-steps.md  04-ui-ux-rules.md  05-test-strategy.md  06-work-status.md  07-release-checklist.md  08-verification-log.md  09-master-spec-compliance.md  10-master-spec-gap-register.md  11-section-verification-gates.md  12-next-day-prompt.md  13-actor-portal-support-foundation.md  14-business-platform-login-session-completion.md  15-facility-terminology-completion.md  16-catalogue-offering-admin-create-completion.md  17-catalogue-offering-admin-lifecycle-completion.md  18-catalogue-category-admin-lifecycle-completion.md  19-catalogue-collection-admin-lifecycle-completion.md  20-2026-07-17-continuation-prompt.md  README.md
scripts/: bootstrap.ps1  run-checks.ps1
tests/integration/: test_actor_support_access.py  test_catalogue_admin_create.py  test_catalogue_admin_lifecycle.py  test_catalogue_category_admin.py  test_catalogue_collection_admin.py  (+6 more)
(+138 files in other folders)
