[project]
name = "business-os"
version = "0.1.0"
description = "Business OS modular ecommerce-first SaaS platform."
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2,<5.3",
    "django-allauth>=65.0",
    "django-ninja>=1.3",
    "django-storages>=1.14",
    "celery>=5.4",
    "redis>=5.2",
    "psycopg[binary]>=3.2",
    "Pillow>=11.0",
    "whitenoise>=6.8",
    "sentry-sdk>=2.19",
    "opentelemetry-sdk>=1.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs>=5.1",
    "playwright>=1.49",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["business_os*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "business_os.config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DJ"]
ignore = ["DJ001"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict_optional = true

[tool.django-stubs]
django_settings_module = "business_os.config.settings.test"
